# obj2stl

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: README.md  airboat.sha  airboat.stl  alfa147.sha  box.sha  box.stl  cube.sha  cube.stl  cuber.sha  minicooper.sha  minicooper.stl  sponza.sha  teapot.sha  teapot.stl  teapotn.sha  teapotn.stl
include/obj2stl/: Converter.h  Coord3.h  Model.h  ObjModel.h  ObjParser.h  ObjReader.h  StlModel.h  StlTriangle.h  StlWriter.h
msvs/: libobj2stl.vcxproj  libobj2stl.vcxproj.filters  obj2stl.sln  obj2stl.vcxproj
obj2stl/: main.cpp
obj2stl.xcodeproj/: project.pbxproj
obj2stl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
obj2stl.xcodeproj/xcuserdata/psaghelyi.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Converter.cpp  Coord3.cpp  Model.cpp  ObjModel.cpp  ObjParser.cpp  ObjReader.cpp  StlModel.cpp  StlWriter.cpp  main.cpp
src/obj2stl/: Converter.cpp  ObjModel.cpp  ObjReader.cpp  StlWriter.cpp
